Update head material.

--- a/web/_includes/head.html
+++ b/web/_includes/head.html
@@ -10,7 +10,8 @@
       <hr/>
     <div class="col-xs-5 col-sm-6 col-md-6 col-lg-6">
       <p>
-        Lecture: Mon 10:00-11:40, TWF 8:00-9:40<br/>
+        Lecture: Tue 8:00-9:40, Wed 14:00-15:40, Thu 8:00-9:40, Fri 8:00-9:40<br/>
+        Location: Lower Hall 212<br/>
         Course material: <a href="https://www.github.com/dbindel/sjtu-summer2018/">GitHub</a>
       </p>
     </div>
