--- a/web/_includes/head.html
+++ b/web/_includes/head.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <h1 class="media-heading">SJTU Short Course</h1>
+      <h1 class="media-heading">SJTU CS 259</h1>
       <h2>Numerical Methods for Data Science</h2>
     </div>
     </div>
