Added office hours.

--- a/web/_includes/head.html
+++ b/web/_includes/head.html
@@ -19,6 +19,7 @@
       <p>
         Prof: <a href="http://www.cs.cornell.edu/~bindel">David Bindel</a><br/>
         Email: <a href="mailto:bindel@cs.cornell.edu">bindel@cs.cornell.edu</a><br/>
+        Office hours: 515 Zhiyuan College, 10:30-12:00, Tues-Thurs.
       </p>
     </div>
     </div>
